<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.CreateIssueFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/status_bar"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_horizontal_default"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:textColorHint="@color/white_50"
                app:hintTextColor="@color/blue"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/text_field_stroke_color"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    app:lineHeight="24dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bodyInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:textColorHint="@color/white_50"
                app:hintTextColor="@color/blue"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/text_field_stroke_color"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bodyInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:textColor="@color/white"
                    android:hint="@string/description"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/attachFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_attach"
                android:text="@string/attach_files"
                android:textColor="@color/white_50"
                android:drawableTint="@color/white_50"
                android:textSize="@dimen/text_default"
                app:layout_constraintTop_toBottomOf="@id/bodyInputLayout"
                app:layout_constraintStart_toStartOf="@id/bodyInputLayout"
                tools:ignore="UseCompatTextViewDrawableXml"/>

            <TextView
                android:id="@+id/attachedCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/blue"
                android:drawableStart="@drawable/ic_img"
                android:drawableTint="@color/blue"
                android:textSize="@dimen/text_medium"
                app:layout_constraintTop_toBottomOf="@id/attachFiles"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseCompatTextViewDrawableXml"/>

            <TextView
                android:id="@+id/attachedPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/attached_photos"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:layout_constraintTop_toBottomOf="@id/attachFiles"
                app:layout_constraintStart_toEndOf="@+id/attachedCounter"/>

            <ImageView
                android:id="@+id/arrowIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/arrow_icon_description"
                android:src="@drawable/ic_arrow"
                android:scaleType="centerInside"
                app:layout_constraintTop_toBottomOf="@id/attachFiles"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/attachmentsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            app:layout_constraintTop_toBottomOf="@id/attachedCounter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_default"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/green"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:indicatorSize="24dp"
        app:indicatorColor="@color/white"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/submitButton"
        app:layout_constraintBottom_toBottomOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="@+id/submitButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>