<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.DetailInfoFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/status_bar"
        app:titleTextColor="@color/white"
        app:menu="@menu/menu_repositories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/linkTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:paddingTop="24dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:textSize="@dimen/text_medium"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:ellipsize="end"
                android:drawableStart="@drawable/ic_link"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="UseCompatTextViewDrawableXml"/>

            <LinearLayout
                android:id="@+id/licenseLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                app:layout_constraintTop_toBottomOf="@id/linkTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/licenseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_license"
                    android:text="@string/license"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_medium"
                    tools:ignore="UseCompatTextViewDrawableXml"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/licenselink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/countersLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                app:layout_constraintTop_toBottomOf="@id/licenseLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/starsCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_star"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    tools:ignore="UseCompatTextViewDrawableXml"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:text="@string/stars"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_medium"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/forksCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_fork"
                    android:textColor="@color/light_green"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_medium"
                    tools:ignore="UseCompatTextViewDrawableXml"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:text="@string/forks"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_medium"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/watchersCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_watch"
                    android:textColor="@color/cyan"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_medium"
                    tools:ignore="UseCompatTextViewDrawableXml"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:text="@string/watchers"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_medium"/>
            </LinearLayout>

            <TextView
                android:id="@+id/readmeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white_70"
                android:lineSpacingExtra="4dp"
                android:textSize="@dimen/text_medium"
                android:paddingBottom="@dimen/margin_horizontal_big"
                android:layout_marginTop="@dimen/margin_horizontal_big"
                android:layout_marginHorizontal="@dimen/margin_horizontal_small"
                app:layout_constraintTop_toBottomOf="@id/countersLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/readmeProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorSize="24dp"
                app:indicatorColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/countersLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/detailsProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorSize="56dp"
        app:indicatorColor="@color/white"
        app:trackThickness="6dp"
        app:layout_constraintTop_toTopOf="@+id/scrollView"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="@+id/scrollView"/>

    <org.example.app.presentation.PlaceholderView
        android:id="@+id/placeholderView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>